# SortoDoco-File-Organizer

./: .gitignore  README.md  extensions.json  main.py  pyproject.toml
.config/: config.toml.example
src/.config/: config.toml
src/infra/: config.py  fs.py
src/services/: executor.py  planner.py
tests/: dev_sandbox_test.py  unique_target_test.py
utils/: desktop_organizer.py  downloads_organizer.py
